--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -24,6 +24,10 @@ android {
 
     compileSdk 34
 
+    sourceSets {
+        main.java.srcDirs += 'src/main/kotlin'
+    }
+
     lintOptions {
         disable 'InvalidPackage'
     }
